# TrellisDecoders

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: bch-128-36-bit-order  bch-31-16-7  bch-31-21-5  bch-32-16  bch-32-16-bit-order  bch-32-21  bch-32-21-bit-order  bch-63-16-23  bch-63-30-13  bch-63-39-9  bch-63-7-57  bch-64-16  bch-64-24-bit-order  bch-64-30  bch-64-39  bch-64-45-bit-order  bch-64-51-bit-order  bch-64-57-bit-order  bch-64-7  bch-7-1  bch-7-4  bch-8-4  dunno-16-9  gnuplot.sh  reed-muller-16-1  reed-muller-16-1-bit-order  reed-muller-16-2  reed-muller-32-1  reed-muller-32-1-bit-order  run-ktkl  run-osd  run-osd-ktkl-viterbi  run_all
include/: BSDDecoder.h  BeastDecoder.h  CatchWrap.h  DecoderID.h  Exceptions.h  ISoftDecoder.h  KTKLDecoder.h  OrderedStatisticsDecoder.h  Simulation.h  SoftDecoder.h  TestUtility.h  Trellis.h  TrellisDecoder.h  Utility.h  ViterbiDecoder.h  catch.hpp  myutil.h  testutil.h
src/: BSDDecoder.cpp  BeastDecoder.cpp  KTKLDecoder.cpp  OrderedStatisticsDecoder.cpp  Simulation.cpp  SoftDecoder.cpp  TestUtility.cpp  Trellis.cpp  TrellisDecoder.cpp  Utility.cpp  ViterbiDecoder.cpp  main.cpp  myutil.cpp  testutil.cpp
tests/: maintest.cpp  test_beast.cpp  test_bsd.cpp  test_constructor.cpp  test_ktkl.cpp  test_matrix  test_osd.cpp  test_simulation.cpp  test_trellis_constructor.cpp  test_utility.cpp  test_viterbi.cpp
